--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE190: Diana Sen</title>
+
+    </head>
+    <body>
+        <hl>Diana Sen's CSCE 190 Site</hl>
+
+    </body>
+</html>
