--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <hl>Diana Sen's CSCE 190 Site</hl>
 
+        <p> &hearts; coding!</p>
+        <p> Sister quality time rules!</p>
+
     </body>
 </html>
