--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     </head>
     <body>
-        <hl>Diana Sen's CSCE 190 Site</hl>
+        <hl>Diana Sen's CSCE 190</hl>
 
-        <p> &hearts; coding!</p>
-        <p> Sister quality time rules!</p>
+        <p> I &hearts; coding!</p>
+    
 
     </body>
 </html>
