--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     </head>
     <body>
-        <hl>Diana Sen's CSCE 190</hl>
+        <hl6>Diana Sen's CSCE 190 Site</hl6>
 
         <p> I &hearts; coding!</p>
     
