--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     </head>
     <body>
-        <hl6>Diana Sen's CSCE 190 Site</hl6>
+        <h1>Diana Sen's CSCE 190 Site</h1>
 
         <p> I &hearts; coding!</p>
     
