--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <body>
         <h1>Diana Sen's CSCE 190 Site</h1>
 
-        <p> I &hearts; coding!</p>
+        <section class="assighment">
+            <a href="files/CSCE190-Problem-Statement.pdf"><img src="images/problem-statement.PNG"></a>
+            <section class="ass-details">
+                <a href="files/CSCE190-Problem-Statement.pdf"><h2>Problem Statement: Personal Fitness <h2></a>
+                <p>
+                    Our users want to exercise and establish proper form but are not familiar with the exercises for particular muscle groups. Our solution aims to inform first time gym users with curated exercise routines, pre-workout stretches, and fitness tracking.
+                </p>
+            </section>
+        </section>    
     
 
     </body>
