--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <title>CSCE190: Diana Sen</title>
+        <link rel="stylesheet" href="styles.css">
 
     </head>
     <body>
         <h1>Diana Sen's CSCE 190 Site</h1>
 
+
+        <!-- Problem- Statement Assighment -->
         <section class="assighment">
             <a href="files/CSCE190-Problem-Statement.pdf"><img src="images/problem-statement.PNG"></a>
             <section class="ass-details">
@@ -15,7 +18,18 @@
                     Our users want to exercise and establish proper form but are not familiar with the exercises for particular muscle groups. Our solution aims to inform first time gym users with curated exercise routines, pre-workout stretches, and fitness tracking.
                 </p>
             </section>
-        </section>    
+        </section>   
+        
+        <!-- Affinity Diagram Assighment-->
+        <section class="assighment">
+            <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.PNG"></a>
+            <section class="ass-details">
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Personal Fitness <h2></a>
+                <p>
+                    My group and I worked together in order to get started on exercise app.
+                </p>
+            </section>
+        </section>
     
 
     </body>
