--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
                 </p>
             </section>
         </section>
+
+         <!-- Personna Assighment-->
+         <section class="assighment">
+            <a href="files/personnas.pdf"><img src="images/personnas.PNG"></a>
+            <section class="ass-details">
+                <a href="files/personnas.pdf"><h2>Personna: 5 Personnas for Personal Fitness App <h2></a>
+                <p>
+                    Personnas of typical workout app users.
+                </p>
+            </section>
+        </section>
     
 
     </body>
