--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
                 </p>
             </section>
         </section>
+
+         <!-- Sketch Assighment-->
+         <section class="assighment">
+            <a href="files/sketch.pdf"><img src="images/sketch.PNG"></a>
+            <section class="ass-details">
+                <a href="files/sketch.pdf"><h2>Sketch: 4 Sketches to Start on Personal Fitness App <h2></a>
+                <p>
+                    Idea for future application.
+                </p>
+            </section>
+        </section>
     
 
     </body>
