--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
                 </p>
                 </section>
             </section>
+
+             <!-- Hi-fi Prototype Assighment-->
+             <section class="assighment">
+                <a href="files/CSCE190Prototype-html/index.html">
+                    <h2>Hight-Fi Prototype: Idea of the app. <h2>
+                </a>
+                <a href="files/CSCE190Prototype-html/index.html">
+                    <img src="images/app.PNG">
+                </a>
+                <p>
+                    Idea/scenario and tasks of the app and the way it works.
+                </p>
+                </section>
+            </section>
         </div> 
 
     </body>
