--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
                 </p>
                 </section>
             </section>
+
+            <!-- Prototype Assighment-->
+            <section class="assighment">
+                <a href="https://www.youtube.com/watch?v=qWxAQfnmN7s">
+                    <h2>Prototype Video: Video Prototype of one user using app <h2>
+                </a>
+                <a href="https://www.youtube.com/watch?v=qWxAQfnmN7s">
+                    <img src="images/videopres.PNG">
+                </a>
+                <p>
+                    Idea/walkthrough of one user using fitness app.
+                </p>
+                </section>
+            </section>
         </div> 
 
     </body>
